--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,16 @@
   // max-width: 1200px;
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
+
+  // .content {
+  //   min-height: 100vh;
+  //   flex: 1 0 auto;
+  // }
   
+  .About, .Contact, .Home {
+    // min-height: fit-content;
+    flex: 1 0 auto; 
+  }
 }
 
