--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,10 +1,11 @@
 .Header {
-    position: absolute;
+    position: fixed;
     width: 100%;
+    min-height: 4rem;
     // opacity: 0;
     display: flex;
     justify-content: space-around;
-    nav {
-        
+    .orderbutton {
+        margin: auto 1rem auto auto;
     }
 }
