--- a/src/components/Jumbotron/style.scss
+++ b/src/components/Jumbotron/style.scss
@@ -3,42 +3,55 @@
     // position: relative;
     // position: absolute;
 
+    display: grid;
+    grid-template-columns: 33.33% 33.33% 33.33%;
+    grid-template-rows: 25% 25% 10% 10% 10% 10% 10%;
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    min-height: fit-content;
 
     .jumbo{
+
+        font-size: 1.75rem;
+        font-weight: bold;
+        color: white;
+        margin: auto;
+
         &-background {
             position: absolute;
             z-index: -1;
-            width: 100vw;
+            height: 100%;
+            width: 100%;
+            overflow: hidden;
             img {
-                width: 100%;
+                min-height: 100%;
+                min-width: 100%;
             }
         }
 
         &-name {
-            position: relative;
-            font-size: 12rem;
+            grid-column-start: span 2;
+            grid-row-start: span 2;
+            font-size: 10rem;
             line-height: 9rem;
             color: white;
-            width: 33.33%
+            width: 33vw;
+            padding: 24px;
+        }
+        
+        &-location {
+            grid-row-start: 3;
+
         }
 
         &-hours {
-            position: relative;
-            font-size: 1.75rem;
-            color: white;
+            grid-row-start: 6;
         }
-
-        &-location {
-            color: white;
-        }
-
+        
         &-contact {
-            position: absolute;
-            right: 15px;
-            top: 665px;
-            color: white;
+            grid-column-start: 3;
+            grid-row-start: 6;
+
         }
     }
 }
