--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,7 +1,10 @@
 $mustard: #C8A84F;
 
 @import url('https://fonts.googleapis.com/css2?family=Grenze+Gotisch:wght@400;600&family=Roboto:ital,wght@0,400;0,700;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Germania+One&family=Pirata+One&display=swap');
 
-$header-font: 'Grenze Gotisch', cursive;
+// $header-font: 'Grenze Gotisch', cursive;
+
+$header-font: 'Pirata One', cursive;
 
 $copy-font: 'Roboto', sans-serif;
