--- a/src/scss/globals.scss
+++ b/src/scss/globals.scss
@@ -16,12 +16,57 @@ body
         font-family: $copy-font;
         font-size: 1.2rem;
     }
+    button
+    {
+        padding: 12px 24px;
+        margin: auto 0;
+        border-radius: 12px;
+        font-size: 1.2rem;
+        &:hover
+        {
+            background-color: #dddddd;
+        }
+    }
 }
 
 .scrim {
     position: absolute;
-    height: 100vh;
-    width: 100vw;
-    background-color: rgba(0, 0, 0, 0.8);
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.65);
     
+}
+
+.popup {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: 10;
+}
+
+.spacer {
+    clear: both;
+}
+
+.content-row {
+    display: flex;
+    justify-content: space-around;
+    min-height: fit-content;
+    background: #333333;
+    color: white;
+    margin: 1rem;
+    border: 5px solid red;
+    border-radius: 25px;
+    
+    .content-card {
+        display: flex;
+        min-height: 33vh;
+        min-width: 18vw;
+        align-items: center;
+        justify-content: center;
+        margin: 24px;
+        padding: 25px;
+        border: 5px solid white;
+        border-radius: 25px;
+    }
 }
