Not sure where I was

--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -4,22 +4,22 @@
     flex-direction: column;
     // overflow: auto;
 
-    .story-card {
+    .card {
 
     }
 
     .story-card {
-        background-image: url('../../assets/img/sh.griffin.lg.jpg');
+        // background-image: url('');
         background-size: 107%;
         background-position: center center;
     }
     .menu-card {
-        background-image: url('../../assets/img/sh.griffin.lg.jpg');
+        // background-image: url('');
         background-size: 107%;
         background-position: center center;
     }
     .order-card {
-        background-image: url('../../assets/img/sh.griffin.lg.jpg');
+        // background-image: url('');
         background-size: 107%;
         background-position: center center;
     }
