--- a/src/scss/globals.scss
+++ b/src/scss/globals.scss
@@ -58,6 +58,37 @@ body
     border: 5px solid red;
     border-radius: 25px;
     
+    .card {
+        background-image: url('//unsplash.it/200/300');
+        background-size: 107%;
+        background-position: center center;
+
+        // /* one item */
+        // &:first-child:nth-last-child(1) {
+        // /* -or- &:only-child { */
+        //     width: 100%;
+        // }
+        
+        // /* two items */
+        // &:first-child:nth-last-child(2),
+        // &:first-child:nth-last-child(2) ~ & {
+        //     width: 50%;
+        // }
+        
+        // /* three items */
+        // &:first-child:nth-last-child(3),
+        // &:first-child:nth-last-child(3) ~ & {
+        //     width: 33.3333%;
+        // }
+        
+        // /* four items */
+        // &:first-child:nth-last-child(4),
+        // &:first-child:nth-last-child(4) ~ & {
+        //     width: 25%;
+        // }
+
+    }
+
     .content-card {
         display: flex;
         min-height: 33vh;
@@ -68,5 +99,42 @@ body
         padding: 25px;
         border: 5px solid white;
         border-radius: 25px;
+    }
+
+    .flip-card {
+        background-color: transparent;
+        // width: 300px;
+        // height: 200px;
+        perspective: 1000px;
+    }
+    .flip-card-inner {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        transition: transform 0.8s;
+        transform-style: preserve-3d;
+    }
+
+    .flip-card:hover, .flip-card-inner {
+        transform: rotateY(180deg);
+    }
+
+    .flip-card-front, .flip-card-back {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        backface-visibility: hidden;
+    }
+
+    .flip-card-front {
+        background-color: #bbb;
+        color: black;
+    };
+
+    .flip-card-back {
+        background-color: dodgerblue;
+        color: white;
+        transform: rotateY(180deg);
     }
 }
